2013-01-25  Dean Jackson  <dino@apple.com>

        Add a user agent stylesheet for plugins
        https://bugs.webkit.org/show_bug.cgi?id=107890

        Reviewed by Alexey Proskuryakov.

        * WebProcess/InjectedBundle/API/c/WKBundlePage.h: Rename client callbacks
        to have a "create" prefix, making it clear that these generate new Strings.
        * WebProcess/InjectedBundle/InjectedBundlePageUIClient.cpp: Actually call into
        the injected bundle to retrieve any custom stylesheet for plugins.
        (WebKit::InjectedBundlePageUIClient::plugInExtraStyleSheet):
        * WebProcess/WebCoreSupport/WebChromeClient.h:
        (WebChromeClient): Add override keyword onto virtual functions now
        that the base class has implementations.

2013-01-25  Alexey Proskuryakov  <ap@apple.com>

        NetworkProcess cannot load files with non-ASCII names
        https://bugs.webkit.org/show_bug.cgi?id=107977

        Reviewed by Brady Eidson.

        * Shared/Network/NetworkResourceLoadParameters.cpp:
        (WebKit::NetworkResourceLoadParameters::encode): Use the correct path accessor.

2013-01-25  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION: System directory prefix doesn't have a "+"
        https://bugs.webkit.org/show_bug.cgi?id=107971

        Reviewed by Brady Eidson.

        * Shared/mac/ChildProcessMac.mm: (WebKit::ChildProcess::initializeSandbox):
        Re-added the "+".

2013-01-25  Brady Eidson  <beidson@apple.com>

        New NetworkProcess can ASSERT after old NetworkProcess crashes
        https://bugs.webkit.org/show_bug.cgi?id=107970

        Reviewed by Alexey Proskuryakov.

        * NetworkProcess/NetworkConnectionToWebProcess.cpp:
        (WebKit::NetworkConnectionToWebProcess::removeLoadIdentifier): Don't tell the scheduler
          to remove a loader that doesn't exist, as we might be recovering from a crash.

2013-01-25  Alexey Proskuryakov  <ap@apple.com>
